# voxel-engine

./: .gitignore  Cargo.toml  README.md
apps/chunk_bench/: Cargo.toml  README.md
apps/chunk_bench/src/: main.rs
apps/sandbox/: Cargo.toml
apps/sandbox/src/: main.rs
apps/shader_lab/: Cargo.toml
apps/shader_lab/src/: main.rs
crates/voxel-core/: Cargo.toml
crates/voxel-core/src/: lib.rs
crates/voxel-mesh/: Cargo.toml
crates/voxel-mesh/src/: lib.rs
crates/voxel-render/: Cargo.toml
crates/voxel-render/src/: lib.rs
crates/voxel-runtime/: Cargo.toml
crates/voxel-runtime/src/: lib.rs
crates/voxel-vulkan/: Cargo.toml  build.rs
crates/voxel-vulkan/shaders/: chunk.frag  chunk.vert
crates/voxel-vulkan/src/: lib.rs
crates/voxel-world/: Cargo.toml
crates/voxel-world/src/: lib.rs
scripts/: setup-vulkan-sdk.ps1
