[package]
name = "voxel-vulkan"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ash.workspace = true
raw-window-handle.workspace = true
thiserror.workspace = true
vk-mem.workspace = true
voxel-mesh.workspace = true
voxel-render.workspace = true
