[package]
name = "voxel-vulkan"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ash-window.workspace = true
ash.workspace = true
bytemuck.workspace = true
glam.workspace = true
raw-window-handle.workspace = true
thiserror.workspace = true
vk-mem.workspace = true
voxel-core.workspace = true
voxel-mesh.workspace = true
voxel-render.workspace = true

[build-dependencies]
shaderc.workspace = true
